# loot

./: .gitignore  README.md
c++/: CMakeLists.txt  config.h.in  loot.pro
c++/clp/: args.h  clp.pro  error.cpp  option.cpp  option.h  parser.cpp  result.cpp  result.h
c++/clp/test/: test.cpp
c++/cmake_cxx11/: CheckCXX11Features.cmake  c++11-test-deleg_constructor-N1986.cpp  c++11-test-enum_class.cpp  c++11-test-enum_class_fail_compile.cpp  c++11-test-initializer_lists-N2672.cpp
c++/include/: config.h
c++/include/algorithm/: algorithm.h
c++/include/clp/: args.h  error.h  option.h  parser.h  result.h
c++/src/clp/: CMakeLists.txt  error.cpp  error.h  option.cpp  parser.cpp  result.cpp
c++/test/clp/: CMakeLists.txt  clp_test.pro  test.cpp
clp/c++/: args.h  clp.pro  error.cpp  error.h  option.cpp  option.h  parser.cpp  parser.h  result.cpp  result.h
